Update query examples, for a single object and bulk update

--- a/hibernate/src/main/java/log4j.properties
+++ b/hibernate/src/main/java/log4j.properties
@@ -9,4 +9,7 @@ log4j.appender.stdout.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1
  
 #Note: This file has an important setting:
 
-log4j.logger.org.hibernate=TRACE
+log4j.logger.org.hibernate=INFO 
+
+#Use TRACE to see detailed hibernate log, including even parameter values. 
+#log4j.logger.org.hibernate=TRACE
