--- a/hibernate/pom.xml
+++ b/hibernate/pom.xml
@@ -27,9 +27,9 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-			<groupId>org.hibernate.orm</groupId>
+			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-core</artifactId>
-			<version>6.0.0.Alpha4</version>
+			<version>5.4.12.Final</version>
 		</dependency>
 		<dependency>
 			<groupId>mysql</groupId>
