--- a/hibernate/pom.xml
+++ b/hibernate/pom.xml
@@ -60,11 +60,12 @@
 			<version>1.2.0</version>
 		</dependency>
 
-		<dependency>
+		<!--  TODO: Migrate to Log4j 2 version -->
+		<!-- <dependency>
 			<groupId>log4j</groupId>
 			<artifactId>log4j</artifactId>
 			<version>1.2.17</version>
-		</dependency>
+		</dependency> -->
 	</dependencies>
 
 	<build>
